[gd_scene load_steps=2 format=3 uid="uid://3yf1x53t5vp5"]

[ext_resource type="Script" uid="uid://b7u8sm68auw81" path="res://Scenes/Deck/card.gd" id="1_weary"]

[node name="Card" type="Control"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = -1052.0
offset_bottom = -497.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_weary")

[node name="Highlight" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.23137255, 1, 1)

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Test"

[node name="PositionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 28.0
offset_right = 42.0
offset_bottom = 51.0
text = "Test"

[node name="PowerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 58.0
offset_right = 42.0
offset_bottom = 81.0
text = "Test"
